--- a/Outfitty/WebApp/appsettings.json
+++ b/Outfitty/WebApp/appsettings.json
@@ -2,11 +2,31 @@
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared"
   },
+  
+  "JWT": {
+    "Key": "some_secret_password_dont_share.123",
+    "Issuer": "taltech.ee",
+    "Audience": "taltech.ee",
+    "ExpiresInSeconds": 60,
+    "RefreshTokenExpiresInDays": 7
+  },
+  
+  "JWTSecurity": {
+    "Key": "",
+    "Issuer": "",
+    "Audience": ""
+  },
+  
+  "DefaultCulture": "et-EE",
+  "SupportedCultures": {
+},
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  
   "AllowedHosts": "*"
 }
