--- a/Outfitty/APP.DAL.EF/APP.DAL.EF.csproj
+++ b/Outfitty/APP.DAL.EF/APP.DAL.EF.csproj
@@ -7,11 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\BASE.Contracts\BASE.Contracts.csproj" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.0" />
+      <ProjectReference Include="..\APP.Domain\APP.Domain.csproj" />
     </ItemGroup>
 
 </Project>
