--- a/Outfitty/WebApp/WebApp.csproj
+++ b/Outfitty/WebApp/WebApp.csproj
@@ -17,6 +17,12 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0"/>
+        <PackageReference Include="Npgsql" Version="9.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\APP.DAL.EF\APP.DAL.EF.csproj" />
+      <ProjectReference Include="..\APP.DTO\APP.DTO.csproj" />
     </ItemGroup>
 
 </Project>
