Resources (APP and BASE) base configuration

--- a/Outfitty/APP.DAL.DTO/APP.DAL.DTO.csproj
+++ b/Outfitty/APP.DAL.DTO/APP.DAL.DTO.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BASE.Contracts\BASE.Contracts.csproj" />
+      <ProjectReference Include="..\BASE.Resources\BASE.Resources.csproj" />
+    </ItemGroup>
+
 </Project>
