--- a/Outfitty/WebApp/appsettings.json
+++ b/Outfitty/WebApp/appsettings.json
@@ -3,23 +3,26 @@
     "DefaultConnection": "DataSource=app.db;Cache=Shared"
   },
   
-  "JWT": {
+  "JWTSecurity": {
     "Key": "some_secret_password_dont_share.123",
     "Issuer": "taltech.ee",
     "Audience": "taltech.ee",
-    "ExpiresInSeconds": 60,
+    "ExpiresInSeconds": 86400,
     "RefreshTokenExpiresInDays": 7
   },
-  
-  "JWTSecurity": {
-    "Key": "",
-    "Issuer": "",
-    "Audience": ""
+
+  "DataInitialization": {
+    "DropDatabase": true,
+    "MigrateDatabase": true,
+    "SeedIdentity": true,
+    "SeedData": true
   },
   
-  "DefaultCulture": "et-EE",
-  "SupportedCultures": {
-},
+  "DefaultCulture": "en",
+  "SupportedCultures": [
+    "en",
+    "et-EE"
+  ],
   
   "Logging": {
     "LogLevel": {
