--- a/Outfitty/APP.DAL.Contracts/APP.DAL.Contracts.csproj
+++ b/Outfitty/APP.DAL.Contracts/APP.DAL.Contracts.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\APP.DAL.DTO\APP.DAL.DTO.csproj" />
       <ProjectReference Include="..\BASE.DAL.Contracts\BASE.DAL.Contracts.csproj" />
     </ItemGroup>
 
