--- a/Outfitty/APP.BLL.Contracts/APP.BLL.Contracts.csproj
+++ b/Outfitty/APP.BLL.Contracts/APP.BLL.Contracts.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\BASE.BLL.Contracts\BASE.BLL.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
+    </ItemGroup>
+
 </Project>
