--- a/Outfitty/APP.BLL.DTO/APP.BLL.DTO.csproj
+++ b/Outfitty/APP.BLL.DTO/APP.BLL.DTO.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\BASE.Resources\BASE.Resources.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
+    </ItemGroup>
+
 </Project>
