--- a/Outfitty/APP.BLL/APP.BLL.csproj
+++ b/Outfitty/APP.BLL/APP.BLL.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\BASE.Contracts\BASE.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
+    </ItemGroup>
+
 </Project>
