--- a/Outfitty/APP.DAL.EF/APP.DAL.EF.csproj
+++ b/Outfitty/APP.DAL.EF/APP.DAL.EF.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
     </ItemGroup>
 
     <ItemGroup>
