--- a/Outfitty/APP.Domain/APP.Domain.csproj
+++ b/Outfitty/APP.Domain/APP.Domain.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\BASE.Domain\BASE.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
+    </ItemGroup>
+
 </Project>
