--- a/Outfitty/APP.Resources/APP.Resources.csproj
+++ b/Outfitty/APP.Resources/APP.Resources.csproj
@@ -21,4 +21,8 @@
       </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
+    </ItemGroup>
+
 </Project>
