--- a/Outfitty/BASE.DAL.EF/BASE.DAL.EF.csproj
+++ b/Outfitty/BASE.DAL.EF/BASE.DAL.EF.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
     </ItemGroup>
 
 </Project>
