--- a/Outfitty/BASE.Domain/BASE.Domain.csproj
+++ b/Outfitty/BASE.Domain/BASE.Domain.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.0" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
     </ItemGroup>
 
 </Project>
