--- a/Outfitty/BASE.Helpers/BASE.Helpers.csproj
+++ b/Outfitty/BASE.Helpers/BASE.Helpers.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.8.0" />
     </ItemGroup>
 
