--- a/Outfitty/WebApp/appsettings.json
+++ b/Outfitty/WebApp/appsettings.json
@@ -1,21 +1,22 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=outfitty_db;Username=postgres;Password=Aaniger13!"
   },
   
   "JWTSecurity": {
-    "Key": "some_secret_password_dont_share.123",
+    "Key": "dfjdlkfjdlskfj1235678sdlkfjsdlfkjdlfjjfnvjasdoefgnvs_some_secret_password_dont_share.123",
     "Issuer": "taltech.ee",
     "Audience": "taltech.ee",
     "ExpiresInSeconds": 86400,
+    "RefreshTokenExpiresInSeconds": 604800,
     "RefreshTokenExpiresInDays": 7
   },
 
   "DataInitialization": {
-    "DropDatabase": true,
+    "DropDatabase": false,
     "MigrateDatabase": true,
-    "SeedIdentity": true,
-    "SeedData": true
+    "SeedIdentity": false,
+    "SeedData": false
   },
   
   "DefaultCulture": "en",
