--- a/Outfitty/WebApp/appsettings.json
+++ b/Outfitty/WebApp/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=outfitty_db;Username=postgres;Password=Aaniger13!"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=outfitty_db;Username=postgres;Password=Aaniger13!",
+    "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  
   "JWTSecurity": {
     "Key": "dfjdlkfjdlskfj1235678sdlkfjsdlfkjdlfjjfnvjasdoefgnvs_some_secret_password_dont_share.123",
     "Issuer": "taltech.ee",
@@ -11,26 +11,22 @@
     "RefreshTokenExpiresInSeconds": 604800,
     "RefreshTokenExpiresInDays": 7
   },
-
   "DataInitialization": {
     "DropDatabase": false,
     "MigrateDatabase": true,
     "SeedIdentity": false,
     "SeedData": false
   },
-  
   "DefaultCulture": "en",
   "SupportedCultures": [
     "en",
     "et-EE"
   ],
-  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  
   "AllowedHosts": "*"
 }
